--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "author": "StudioPress",
     "authoruri": "http://www.studiopress.com/",
     "version": "1.1.1",
-    "license": "GPL-2.0+",
+    "license": "GPL-2.0-or-later",
     "licenseuri": "http://www.gnu.org/licenses/gpl-2.0.html",
     "textdomain": "seo-data-transporter"
   }
