--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "authoruri": "http://www.studiopress.com/",
     "version": "1.1.1",
     "license": "GPL-2.0-or-later",
-    "licenseuri": "http://www.gnu.org/licenses/gpl-2.0.html",
+    "licenseuri": "https://www.gnu.org/licenses/gpl-2.0.html",
     "textdomain": "seo-data-transporter"
   }
 }
