--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "license": "GPL-2.0-or-later",
     "licenseuri": "https://www.gnu.org/licenses/gpl-2.0.html",
     "textdomain": "seo-data-transporter"
+  },
+  "scripts": {
+    "makepot": "composer makepot"
   }
 }
