Change the workflow name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,7 @@ orbs:
   wp-svn: studiopress/wp-svn@0.1
 
 workflows:
-  version: 2
-  check-wp-cs:
+  test-deploy:
     jobs:
       - php/test:
           test-command: phpcs
