--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
 	"homepage": "https://github.com/studiopress/seo-data-transporter",
 	"license": "GPL-2.0-or-later",
 	"require": {
-		"php": "^5.3 || ^7",
+		"php": "^5.3 || ^7 || ^8",
 		"composer/installers": "^1"
 	},
 	"require-dev": {
-		"php": "^5.6 || ^7",
+		"php": "^5.6 || ^7 || ^8",
 		"dealerdirect/phpcodesniffer-composer-installer": "*",
 		"squizlabs/php_codesniffer": "^3.3.1",
 		"phpcompatibility/phpcompatibility-wp": "*",
@@ -17,7 +17,11 @@
 		"wp-cli/i18n-command": "^2.1"
 	},
 	"config": {
-		"sort-order": true
+		"sort-order": true,
+		"allow-plugins": {
+			"composer/installers": true,
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
 	},
 	"minimum-stability": "dev",
 	"prefer-stable": true,
