--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"squizlabs/php_codesniffer": "^3.3.1",
 		"phpcompatibility/phpcompatibility-wp": "*",
 		"wp-coding-standards/wpcs": "^1",
-		"wp-cli/i18n-command": "^2.1"
+		"wp-cli/i18n-command": "2.1"
 	},
 	"config": {
 		"sort-order": true,
