--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
   test-deploy:
     jobs:
       - php/test:
-          test-command: php -i && phpcs
+          test-command: curl --version && phpcs
       - approval-for-deploy-tested-up-to-bump:
           requires:
             - php/test
