--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,9 @@ workflows:
   test-deploy:
     jobs:
       - php/test:
-          test-command: curl --version && phpcs
+          setup:
+            - run: php -i
+          test-command: phpcs
       - approval-for-deploy-tested-up-to-bump:
           requires:
             - php/test
