--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,16 @@
 	"homepage": "https://github.com/studiopress/seo-data-transporter",
 	"license": "GPL-2.0-or-later",
 	"require": {
-		"php": "^5.3 || ^7 || ^8",
+		"php": "^8.1",
 		"composer/installers": "^1"
 	},
 	"require-dev": {
-		"php": "^5.6 || ^7 || ^8",
-		"dealerdirect/phpcodesniffer-composer-installer": "*",
+		"php": "^8.1",
+		"dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
 		"squizlabs/php_codesniffer": "^3.7.2",
-		"phpcompatibility/phpcompatibility-wp": "*",
+		"phpcompatibility/phpcompatibility-wp": "^2.1.4",
 		"wp-coding-standards/wpcs": "^3.0.1",
-		"wp-cli/i18n-command": "^2.1"
+		"wp-cli/i18n-command": "^2.4.4"
 	},
 	"config": {
 		"sort-order": true,
