--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,24 @@
 version: 2.1
 
 orbs:
-  php: circleci/php@1.1
   wp-svn: studiopress/wp-svn@0.1
+
+jobs:
+  lint:
+    docker:
+      - image: cimg/php:8.2
+    steps:
+      - checkout
+      - run: php -i
+      - run: phpcs
 
 workflows:
   test-deploy:
     jobs:
-      - php/test:
-          version: '8.2'
-          setup:
-            - run: php -i
-          test-command: phpcs
+      - lint
       - approval-for-deploy-tested-up-to-bump:
           requires:
-            - php/test
+            - lint
           type: approval
           filters:
             tags:
