Use the base image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,11 @@ orbs:
 jobs:
   lint:
     docker:
-      - image: wordpress:php8.2-fpm-alpine
+      - image: cimg/base:latest
     steps:
       - checkout
       - run: php -i
+      - php/install-composer
       - php/install-packages
       - run: phpcs
 
