Fix the base version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
 jobs:
   lint:
     docker:
-      - image: cimg/base:latest
+      - image: cimg/base:2021.04
     steps:
       - checkout
       - run: php -i
