Correct the phpcs command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
             rm composer-setup.php
             composer config -g github-protocols https && composer config -g repo.packagist composer https://packagist.org
       - php/install-packages
-      - run: phpcs
+      - run: composer phpcs
 
 workflows:
   test-deploy:
