Do a dry run of deploying

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,11 +33,7 @@ workflows:
       - wp-svn/deploy:
           requires:
             - lint
-          filters:
-            tags:
-              only: /^\d+\.\d+\.\d+$/
-            branches:
-              ignore: /.*/
+          dry-run: true
       - approval-for-deploy-tested-up-to-bump:
           requires:
             - lint
