Check version before releasing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,9 +30,16 @@ workflows:
   test-deploy:
     jobs:
       - lint
+      - wp-svn/check-versions:
+          filters:
+            tags:
+              only: /^\d+\.\d+\.\d+$/
+            branches:
+              only: /^release\/.*/
       - wp-svn/deploy:
           requires:
             - lint
+            - wp-svn/check-versions
           dry-run: true
       - approval-for-deploy-tested-up-to-bump:
           requires:
